# SmartDBE

./: README.md  downloadSmartMDSD.sh
SmartAAS/Tutorial/: README.md
SmartAAS/Tutorial/Images/: Diagrams.odg
SmartAASbox/: AASSys.xml  AASSys.xml_active  AASSys.xml_untouched  BridgeSimulator.java  DEF.xml  ImportJar.sh  MagicLaunch.sh  SmartAASDemo.postman_collection.json  StopAllRunningServers.sh  SystemWebotsLarryNavigation.aas_sms  SystemWebotsLarryNavigationAAS.xml  smartmdsd2aasUsage.txt
SmartAASbox/FilesForV1/: RunJar2.sh
SmartAASbox/FilesForV1/SmartAASUsage/: Makefile
SmartAASbox/SmartAASUsage/: simple_client  simple_client_main.cpp
SmartIN/SmartIN_Demo/SmartMDSDProjects/: color.txt
SourceCode/SmartAAS-DSL/: README.md
SourceCode/SmartAAS-DSL/Java-BaSyx-Projects/bridgesimulator/: .project  pom.xml
SourceCode/SmartAAS-DSL/Java-BaSyx-Projects/smartmdsd2aas/: .project  pom.xml
SourceCode/SmartAAS-DSL/feature/: .project  category.xml  feature.xml
SourceCode/SmartAAS-DSL/icons/: SmartAAS.odg
SourceCode/SmartAAS-DSL/plugins/org.SmartAAS.DSL.Tools/: .project  plugin.xml
SourceCode/SmartAAS-DSL/plugins/org.SmartAAS.DSL.menuNewModels/: .project  plugin.xml
SourceCode/SmartDBE-Common/: README.md
SourceCode/SmartDBE-Common/icons/SmartDBE/: SmartDBE.odg
SourceCode/SmartDBE-Common/icons/SmartDG/: SmartDG.odg
SourceCode/SmartDBE-Common/icons/SmartIN/: SmartIN.odg
SourceCode/SmartDBE-Common/icons/SmartTS/: SmartTS.odg
SourceCode/SmartDBE-Common/icons/icon2/: README.txt
SourceCode/SmartDBE-Common/plugins/Console/: .project  plugin.xml
SourceCode/SmartDBE-Common/plugins/Define/: .project  plugin.xml
SourceCode/SmartTS-DSL/: README.md
SourceCode/SmartTS-DSL/SmartTS-DSL-vx/examples/Domains/DomainHMI/toolify/src-gen/: CMakeLists.txt  DomainHMIJSONConfig.cmake.in
SourceCode/SmartTS-DSL/SmartTS-DSL-vx/examples/Domains/DomainHMI/toolify/src-gen/DomainHMIJSON/: CommTrafficLightJSON.cc  CommTrafficLightJSON.hh
SourceCode/SmartTS-DSL/feature/: .project  category.xml  feature.xml
(+2479 files in other folders)
